2009-11-05  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: empty line in expectations build fix.

        * fast/events/event-listener-map-rehash-crash-expected.txt:

i2009-11-05  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Timothy Hatcher.

        REGRESSION: Web Inspector doesn't show CSS rules properly for iframes

        https://bugs.webkit.org/show_bug.cgi?id=30884

        * inspector/console-dir.html:
        * inspector/console-dirxml.html:
        * inspector/console-format-collections-expected.txt:
        * inspector/console-format-collections.html:
        * inspector/console-format.html:
        * inspector/console-tests.html:
        * inspector/elements-panel-structure-expected.txt:
        * inspector/elements-panel-structure.html:
        * inspector/evaluate-in-frontend.js:
        ():
        (expandDOMSubtree.processChildren):
        (expandDOMSubtree):
        (dumpConsoleMessages):
        * inspector/resources/styles-iframe-data.html: Added.
        * inspector/styles-iframe-expected.txt: Added.
        * inspector/styles-iframe.html: Added.
        * platform/qt/Skipped:

2009-11-05  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Geoffrey Garen.

        Rehashing of EventListenerMap leads to loss of EvenListenerList.
        https://bugs.webkit.org/show_bug.cgi?id=31027

        * fast/events/event-listener-map-rehash-crash.html: Added.

2009-11-05  Brian Weinstein  <bweinstein@apple.com>

        Rubber-stamped by Adam Roben.

        Add ruby tests and failing accessibility test to Windows Skipped list,
        we should be able to re-add ruby tests, but not sure the correct course
        of action yet.

        * platform/win/Skipped:

2009-11-05  Jian Li  <jianli@chromium.org>

        Reviewed by Dmitri Titov.

        Tests the drag event bubbling on different targets:
        - iframe with invalid source
        - iframe with valid source
        - non-iframe droppable element